Cleanup javadoc for ResourceScope/SegmentAllocator